fix: removed scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,6 +25,7 @@
 ::-webkit-scrollbar {
   width: 10px;
   height: 10px;
+  display: none;
 }
 
 /* Track */
